scrolling container instead of body fixes overflow-xissues

--- a/Startseite/css/styles.css
+++ b/Startseite/css/styles.css
@@ -6,12 +6,19 @@ html{
   overflow-y: hidden;
 }
 body{
+  margin: 0px;
+  overflow: hidden;
 }
 header{
   position: fixed;
+  top: 30px;
+  left: 30px;
 }
 main{
   height: 100vh;
+  width: 100vw;
+  overflow-x: scroll;
+  overflow-y: hidden;
 }
 article{
   white-space: nowrap;
@@ -37,6 +44,7 @@ footer{
   position: fixed;
   right:0px;
   bottom: 0px;
+  padding: 30px;
 }
 
 ::-moz-selection { /* Code for Firefox */
